# memoverlay

./: Cargo.toml  README.md
src/: error.rs  lib.rs  patch.rs  patch_layer.rs  patch_search_result.rs  traits.rs
src/memoverlay/: display.rs  mod.rs  read.rs  seek.rs  write.rs
tests/: test_range.rs
